Update dependencies and target API 36
Signed-off-by: Andrew Gunnerson <accounts+github@chiller3.com>