@@ -195,7 +195,7 @@ public class AlterInstallerSerializer implements XmlSerializer {
             throw new IllegalStateException("Tag stack is empty");
         }
 
-        String prev = tags.remove(tags.size() - 1);
+        String prev = tags.removeLast();
         if (!TextUtils.equals(prev, name)) {
             throw new IllegalStateException("Expected to pop " + name + ", but have " + prev);
         }
